Travis CI Attempt 7

--- a/build.xml
+++ b/build.xml
@@ -20,7 +20,7 @@
     <target name="init">
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
-            <fileset dir="CarFactoryPattern/src">
+            <fileset dir="rrodri64-Assignment5/CarFactoryPattern/src">
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
